[package]
name = "tree-rs"
version = "0.1.1"
edition = "2024"
description = "A fast, cross-platform command-line tool to display directory structures in a tree-like format, with support for depth limiting, glob filtering, and hidden file toggling."
repository = "https://github.com/yalamaddisasiKumar/tree-rs"
license = "MIT"
keywords = ["tree", "directory", "cli", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
